# MahjongLab_v2

./: .gitignore  DATABASE_SCHEMA_DRAFT.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_TIMELINE.md  OPENAPI_DRAFT_V0.yaml  PROTOTYPE_PAGE_MIGRATION_CHECKLIST.md  README.md  requirements.txt
Mahjong-AI/: .gitignore  PROJECT_CONTEXT.md
Mahjong-AI/mahjong/: AGARI_TABLE_2.pkl  MACHI_TABLE.pkl  agent.py  make_agari_table_2.py
Mahjong-AI/online_game/: client.py  server.py
Mahjong-AI/online_game/web_client/: index.html  review_replay.html
Mahjong-AI/sl_train/: train_discard_model.py  train_furo_model.py  train_reward.py  train_riichi_model.py
Mortal/docs/src/: SUMMARY.md
Mortal/libriichi/src/: lib.rs
Mortal/mortal/: common.py  config.py  dataloader.py  mortal.py  one_vs_three.py  player.py  prelude.py  train.py  train_grp.py
apps/web/: DESIGN.md  PRODUCT.md  README.md  package-lock.json  package.json  vite.config.ts
apps/web/.impeccable/: design.json
docs/: ARCHITECTURE_V1.md  ENVIRONMENT_SETUP.md
docs/acceptance/: PHASE_0_ACCEPTANCE.md  PHASE_1_ACCEPTANCE.md  PHASE_2_ACCEPTANCE.md  PHASE_3_ACCEPTANCE.md
docs/schemas/: review-result.schema.json
infra/docker/: docker-compose.yml
services/api/: .gitignore  README.md  pyproject.toml
services/api/app/: config.py  database.py  jobs.py  main.py  majsoul_url_import.py  models.py  play_launcher.py  review_engine.py  schemas.py
services/api/mahjonglab_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/tests/: test_review_engine.py
原型设计/: README.md  index.html  package-lock.json  package.json
(+42 files in other folders)
