[project]
name = "mahjonglab-api"
version = "0.1.0"
description = "Review-first backend MVP for MahjongLab"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135,<1.0",
  "uvicorn>=0.44,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.10,<3.0",
  "python-multipart>=0.0.26,<1.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
