[project]
name = "mahjonglab-api"
version = "0.1.0"
description = "Review-first backend MVP for MahjongLab"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135,<1.0",
  "uvicorn>=0.44,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.10,<3.0",
  "python-multipart>=0.0.26,<1.0",
  "playwright>=1.58,<2.0"
]

[project.optional-dependencies]
play = [
  "numpy>=1.25,<2.0",
  "h11>=0.13,<0.15",
  "quart>=0.19,<1.0",
  "termcolor>=2.3,<3.0",
  "torch>=2.0,<3.0",
  "tqdm>=4.66,<5.0",
  "websockify>=0.11,<1.0",
  "wsproto>=1.2,<1.3"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
